<resources>
    <string name="app_name">Demo0</string>
    <string name="text1">初步试验的应用</string>
    //按钮内容
    <string name="btn1">XYZ阅读器</string>
    <string name="btn2">热门电影</string>
    <string name="btn3">股票雄鹰</string>
    <string name="btn4">最新闻</string>
    <string name="btn5">毕业设计</string>
    //颜色
    <color name="gray2">#E9E8E6</color>
    <color name="gray">#777777</color>
    //显示消息
    <string name="btn_msg1">各类书籍</string>
    <string name="btn_msg2">最新最热的电影</string>
    <string name="btn_msg3">优质选股</string>
    <string name="btn_msg4">第一时间新闻报道</string>
    <string name="btn_msg5">这是一篇论文</string>

</resources>
