<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.saint.demo0.MainActivity">


    <Button
        android:id="@+id/button1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="btnClick"
        android:text="@string/btn1"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/gray2"
        android:textSize="20sp"
        tools:textColorLink="@android:color/background_light" />

    <Button
        android:id="@+id/button2"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="btnClick"
        android:text="@string/btn2"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/gray2"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/text1"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/gray" />

    <Button
        android:id="@+id/button4"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button3"
        android:layout_below="@+id/button3"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="btnClick"
        android:text="@string/btn4"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/gray2"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button4"
        android:layout_below="@+id/button4"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="btnClick"
        android:text="@string/btn5"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/gray2"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="btnClick"
        android:text="@string/btn3"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/gray2"
        android:textSize="20sp" />

</RelativeLayout>
